--- a/src/style/app.css
+++ b/src/style/app.css
@@ -51,14 +51,10 @@
 
 }
 
-#subscribe{
+#load{
     animation-name: button;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
-    /* position: absolute; */
 }
 
-@keyframes button {
-     
-}
 
