--- a/src/style/components/navbar.css
+++ b/src/style/components/navbar.css
@@ -424,15 +424,15 @@
     }
     
     .mob-nav-box-two{
-        position: absolute;
-        bottom: 0;
-        left: 0;
+        /* position: absolute; */
+        margin: 20px 0;
+        right: 0;
         display: block;
         height: 70px;
         width: 100%;
-        background-color: tomato;
-        padding: 25px 0!important;
-        margin: 0 0!important;
+        /* background-color: tomato; */
+        padding: 25px 0;
+        /* margin: 0 0!important; */
         text-align: center;
 
         font-size: .8rem;
@@ -458,6 +458,24 @@
         transform: translateX(0%)!important;
         box-shadow: 0px 0px 12px 16px rgba(0, 0, 0, 0.096);
     }
+
+    .sub-nav .dropdown {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+
+    .sub-nav .arrow{
+        transform: rotate(90deg);
+    }
+
+    /* .dropdown-active {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    } */
 
 }
 
