--- a/src/style/components/bluebox.css
+++ b/src/style/components/bluebox.css
@@ -38,8 +38,7 @@
 
 .blue-box button{
 
-    margin-right: 105px;
-    margin-bottom: 30px;
+    margin:  0 auto 20px auto;
 
     width: 140px;
     padding: 8px 0px;
@@ -56,10 +55,10 @@
 }
 
 .blue-box button:hover{
-    border: 2px solid #fff;
-    color: rgb(0, 67, 129);
+    /* border: 2px solid #fff;
+    color: rgb(0, 67, 129); */
     cursor: pointer;
-    background-color: #fff;
+    /* background-color: #fff; */
 } 
 
 @media screen and (max-width:450px) {
