--- a/careers/css/aboutus.css
+++ b/careers/css/aboutus.css
@@ -59,9 +59,9 @@
 
 @media screen and (max-width:978px) {
     #about-us{
-        min-height: auto;
+        min-height: 100vh;
     
-        padding: 100px 0;
+        /* padding: 100px 0; */
     
         display: flex;
         flex-wrap: wrap;
@@ -81,7 +81,7 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        padding-left: 30px;
+        /* padding-left: 30px; */
         width: 100%;
     }
     
