--- a/src/style/components/navbar.css
+++ b/src/style/components/navbar.css
@@ -263,7 +263,7 @@
         height: 100vh;
         width: 65%;
         background-color: #fff;
-        padding: 90px 15px 0 15px;
+        padding: 90px 15px 50px 15px;
 
         overflow-y: scroll;
 
