--- a/src/style/app.css
+++ b/src/style/app.css
@@ -55,10 +55,40 @@
     transition: .3s ease-in 0s;
 }
 
+#support{
+    transition: .3s ease-in 0s;
+}
+
 .animationButton{
     animation-name: spin;
     animation-duration: .5s;
     animation-iteration-count: infinite;
+}
+
+input{
+    height: 42px;
+    margin-top: 10px;
+    display: none;
+
+    transition: .3s ease-in 0s;
+}
+
+.subs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#tick{
+    margin: 10px 10px 0 10px!important;
+    border-radius: 100%;
+    outline: none;
+    border: none;
+    width: 40px;
+    height: 40px;
+    display: none;
+
+    transition: .3s ease-in 0s;
 }
 
 @keyframes spin{
@@ -80,3 +110,5 @@
         transform: rotate(360deg);
     }
 }
+
+
