--- a/careers/css/card.css
+++ b/careers/css/card.css
@@ -157,9 +157,38 @@
 
 @media screen and (max-width:450px){
 
+    #subsystem .container .left h1{
+        font-size: 1.8rem;
+        text-transform: uppercase;
+    }
+    
+    #subsystem .container .left span{
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
+    
+    #subsystem .container .left p{
+        font-size: .85rem;
+        line-height: 1.4rem;
+        padding-top: 15px;
+        padding-right: 30px;
+    }
+    
 
 
 
+    .roles-heading h1{
+        /* position: absolute; */
+        font-size: 1.4rem;
+        left: 15%;
+        text-transform: uppercase;
+    }
+    
+    .roles-heading .sub-heading{
+        /* position: absolute; */
+        font-size: 1rem;
+    }
+    
 
 
     .roles-heading{
@@ -247,21 +276,6 @@
         width: 100%;
     }
     
-    #subsystem .container .left h1{
-        font-size: 2.2rem;
-        text-transform: uppercase;
-    }
-    
-    #subsystem .container .left span{
-        font-size: 1rem;
-        text-transform: uppercase;
-    }
-    
-    #subsystem .container .left p{
-        font-size: .95rem;
-        line-height: 1.4rem;
-        padding-top: 15px;
-    }
 }
 
 @media screen and (max-width:390px) {
