--- a/careers/css/careers-home.css
+++ b/careers/css/careers-home.css
@@ -118,6 +118,7 @@
         justify-content: center;
         width: 100%;
         padding-top: 50px;
+        padding-right: 30px;
     }
     
     #career-areas .container img{
