--- a/sponsors/css/sponsor-home.css
+++ b/sponsors/css/sponsor-home.css
@@ -110,7 +110,8 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        /* padding-left: 30px; */
+        padding-left: 30px;
+        padding-top: 100px;
         width: 100%;
     }
     
