--- a/careers/css/life.css
+++ b/careers/css/life.css
@@ -179,4 +179,12 @@
         height: 250px;
         
     }
+
+    #life .container-right{
+       
+        padding: 20px 0;
+       
+    }
+
+   
 }
