--- a/src/style/sections/careers.css
+++ b/src/style/sections/careers.css
@@ -53,7 +53,7 @@
     line-height: var(--sectionParagraphLineHeight);
 }
 
-#careers .container .left button{
+#careers .container .left a{
    margin-top: 30px;
 }
 
@@ -193,7 +193,7 @@
         line-height: var(--sectionParagraphLineHeightM);
     }
 
-    #careers .container .left button{
+    #careers .container .left a{
     margin-top: 30px;
     }
     #careers .container .right{
