--- a/src/style/sections/intro.css
+++ b/src/style/sections/intro.css
@@ -87,7 +87,7 @@
     line-height: 1.4rem;
 }
 
-#intro .container .left button{
+#intro .container .left a{
    margin-top: 30px;
    margin-left: 60px;
 }
@@ -173,7 +173,7 @@
 
         padding-left: 30px;
     }
-    #intro .container .left button{
+    #intro .container .left a{
         margin-top: 30px;
         margin-left: 30px;
     }
