--- a/src/style/sections/partners.css
+++ b/src/style/sections/partners.css
@@ -53,7 +53,7 @@
     line-height: 1.4rem;
 }
 
-#partners .container .right button{
+#partners .container .right a{
    margin-top: 30px;
 }
 
@@ -172,7 +172,7 @@
         line-height: 1.4rem;
     }
 
-    #partners .container .right button{
+    #partners .container .right a{
     margin-top: 30px;
     }
 
