--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: flex-start;
 
-    background-image: url(../../assets/Home/home-background\ \(2\).png);
+    background-image: url(../../assets/Home/home-2.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
