--- a/src/style/app.css
+++ b/src/style/app.css
@@ -50,7 +50,7 @@
      --sectionParagraphLineHeightXS: 1.2rem;
 
 }
-
+/* 
 #load{
     transition: .3s ease-in 0s;
 }
@@ -109,6 +109,6 @@ input{
 
         transform: rotate(360deg);
     }
-}
+} */
 
 
