--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -1,6 +1,12 @@
 #home{
     min-height: 100vh;
     width: 100%;
+
+    background-image: url(../../assets/Home/home-212.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-position: center center; */
+    background-attachment: fixed;
 }
 
 #home .container{ 
@@ -10,7 +16,7 @@
     align-items: center;
     justify-content: flex-start;
 
-    background-image: url(../../assets/Home/home-2.png);
+    background-image: url(../../assets/Home/home-21.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
