--- a/crowdfunding/CSS/slabs.css
+++ b/crowdfunding/CSS/slabs.css
@@ -180,11 +180,11 @@
 .check-out{
   font-size: 1rem;
   font-weight: 700;
-  margin: 50px 0 0 30px;
+  margin: 100px 0 0 30px;
 }
 
 .checkout-details{
-  margin: 10px 220px 0 30px;
+  margin: 10px 30px 0 30px;
   font-size: .75rem;
   font-weight: 400;
   line-height: 1.2rem;
@@ -239,9 +239,10 @@
 .upi-id{
   
 
-  font-size: .75rem;
+  font-size: .85rem;
   font-weight: 400;
   line-height: 1.2rem;
+  margin-top: 10px;
 }
 
 .qr{
@@ -254,15 +255,141 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
 }
 
-#slabs .container .loader {
+.upi-button{
+  margin: 10px 0px 0 5px;
+  height: 38px;
+  background-color: #fff;
+  width: 158px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ border-radius: 4px;
+ border: .1rem solid black;
+}
+
+.upi-image{
+  height: 30px;
+}
+
+#qrcode{
+  /* display: none; */
+  /* opacity: 0; */
+}
+
+#qrcode img{
+  width:  120px!important;
+  height: 120px!important;
+  /* margin-top:15px; */
+
+ 
+}
+
+
+#get-qr{
+  
+  margin: 10px 5px 0 0;
+  height: 38px;
+  background-color: #fff;
+  width: 158px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ border-radius: 4px;
+ border: .1rem solid black;
+ text-decoration: none;
+ color: black;
+
+}
+
+.qr-buttons{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+#text{
+  opacity: 0;
+}
+
+
+#pay-load-two {
+  display: none;
+
+ 
+  align-items: center;
+  justify-content: center;
+  width: 100%!important;
+  /* width: 50px!important;
+  height: 50px!important; */
+
+  /* transform: translateX(50%)!important; */
+
+  /* position: relative; */
+}
+
+#pay-load{
+  border: 6px solid #f3f3f3; /* Light grey */
+  border-top: 6px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  margin: 150px 0;
+  /* display: none; */
+}
+
+#slabs .container .loader{
   border: 6px solid #f3f3f3; /* Light grey */
   border-top: 6px solid #3498db; /* Blue */
   border-radius: 50%;
   width: 40px;
   height: 40px;
   animation: spin 2s linear infinite;
-  margin: 65px 0;
+  margin: 200px 0;
+  /* display: none; */
+}
+
+#sendbut{
+  opacity: 0;
+}
+
+#edit-money{
   display: none;
+
+  margin: 10px 0px 0 0;
+  /* height: 38px; */
+  padding: 10px 0;
+  background-color: #fff;
+  width: 100px;
+   border-radius: 4px;
+   border: .1rem solid black;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+
+  font-size: .8rem;
+}
+
+#mobile-upi{
+  display: none;
+}
+
+.state-select{
+  padding-bottom: 20px;
+}
+
+.payment-instructions{
+  padding-top: 20px;
+  font-size: .8rem;
+}
+
+.generated-qr{
+  width: 100%;
+  height: 100%!important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @keyframes spin {
@@ -277,6 +404,57 @@
     display: flex;
     flex-direction: column;
   }
+
+  #mobile-upi{
+    display: block;
+  }
+  
+
+  #slabs .container .left .card-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    flex-wrap: wrap;
+  
+    padding: 0 0px;
+  
+  }
+  
+  .qr-buttons{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  
+#get-qr{
+  
+  margin: 10px 0px 0 0;
+  height: 38px;
+  background-color: #fff;
+  width: 158px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ border-radius: 4px;
+ border: .1rem solid black;
+ text-decoration: none;
+ color: black;
+
+}
+
+#upi-cone .upi-button{
+  margin: 10px 0px 0 0px;
+  height: 38px;
+  background-color: #fff;
+  width: 158px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ border-radius: 4px;
+ border: .1rem solid black;
+ left: 0;
+}
   
   
   #slabs .container .left{
@@ -336,6 +514,21 @@
     
   }
 
+  .qr-pay{
+  position: absolute;
+  bottom: 120px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  }
+
+  .upi-button{
+    position: relative;
+    left: 30px;
+  }
+/* 
   .googlepay-payment{
     display: block;
 
@@ -347,7 +540,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-  }
+  } */
 
   #buttons{
     margin-top: 10px;
@@ -369,14 +562,14 @@
   }
 
   #slabs .container .payment-box{
-    height: 925px;
+    height: 750px;
     width: 345px;
     background-color: rgb(241, 241, 241);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
     position: relative;
   }
 
-  .qr-pay{
+  /* .qr-pay{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -384,7 +577,7 @@
     position: absolute;
     right: 0px;
     bottom: 200px;
-  }
+  } */
 
   .qr{
     height: 120px;
@@ -405,14 +598,14 @@
   }
 
   #slabs .container .payment-box{
-    height: 985px;
+    height: 820px;
     width: 300px;
     background-color: rgb(241, 241, 241);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
     position: relative;
   }
 
-  .qr-pay{
+  /* .qr-pay{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -420,7 +613,7 @@
     position: absolute;
     right: 0px;
     bottom: 200px;
-  }
+  } */
 
   .qr{
     height: 120px;
