--- a/crowdfunding/CSS/home.css
+++ b/crowdfunding/CSS/home.css
@@ -186,8 +186,7 @@
     text-align: left;
     font-size: .35em;
     color: #000;
-
-    left: 2.5%;
+    padding: 0 5%;
 }
 
 .home-scroll-buttons{
