--- a/crowdfunding/CSS/slabs.css
+++ b/crowdfunding/CSS/slabs.css
@@ -400,7 +400,7 @@
 }
 
 #thank-you{
-  background-image: url(../thank-you.png);
+  background-image: url(../thank-you.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
