--- a/crowdfunding/CSS/app.css
+++ b/crowdfunding/CSS/app.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 @import './stats.css';
@@ -9,6 +9,7 @@
 @import './funds.css';
 @import './contributors.css';
 @import './modal.css';
+@import './achievements.css';
 
 
 
