--- a/crowdfunding/CSS/achievements.css
+++ b/crowdfunding/CSS/achievements.css
@@ -14,12 +14,13 @@
 #intro .container .card{
     height: 235px;
     width: 425px;
-    padding: 15px 15px 15px 40px;
+    padding: 30px 15px 30px 40px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,.4);
 
     margin: 15px 20px;
 
 }
+
 
 
 #intro .container .card p{
@@ -46,4 +47,100 @@
     color: #fff;
     height: 40px;
     width: 100px;
+}
+
+@media screen and (max-width: 450px) {
+    #intro .container .card{
+        height: 250px;
+        width: 425px;
+        padding: 30px 15px 30px 40px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,.4);
+    
+        margin: 15px 20px;
+    
+    }
+/* 
+    #intro .card .year{
+        position: absolute;
+        bottom: 165px;
+    
+        transform: rotateZ(-90deg);
+        left: -50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(0, 148, 216);
+        color: #fff;
+        height: 40px;
+        width: 100px;
+    } */
+    
+}
+
+@media screen and (max-width: 375px) {
+    #intro .container .card{
+        height: 300px;
+        width: 425px;
+        padding: 30px 15px 30px 40px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,.4);
+    
+        margin: 15px 20px;
+    
+    }
+
+    #intro .card .year{
+        position: absolute;
+        bottom: 135px;
+    
+        transform: rotateZ(-90deg);
+        left: -50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(0, 148, 216);
+        color: #fff;
+        height: 40px;
+        width: 100px;
+    }
+    
+    #intro .container .card p{
+        font-size: .8rem;
+     
+        line-height: 1.2rem;
+     
+     }
+}
+
+@media screen and (max-width: 350px) {
+    #intro .container .card{
+        height: 300px;
+        width: 425px;
+        padding: 20px 15px 20px 40px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,.4);
+    
+        margin: 15px 20px;
+    
+    }
+
+    #intro .card .year{
+        position: absolute;
+        bottom: 135px;
+    
+        transform: rotateZ(-90deg);
+        left: -50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(0, 148, 216);
+        color: #fff;
+        height: 40px;
+        width: 100px;
+    }
+    
+    #intro .container .card p{
+        font-size: .7rem;
+     
+        line-height: 1rem;
+     
+     }
 }
