--- a/crowdfunding/CSS/intro.css
+++ b/crowdfunding/CSS/intro.css
@@ -1,10 +1,14 @@
+h1{
+    margin: 0;
+}
+
 #intro{
     /* height: 100vh; */
 
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 150px 0 0 0;
+    padding: 100px 0 0 0;
 
 }
 
@@ -18,13 +22,13 @@
     align-items: flex-start;
     justify-content: space-between;
 
-    width: 60%;
+    width: 50%;
     padding-left: 60px;
     /* height: 40%; */
 }
 
 #intro .chart{
-    width: 40%;
+    width: 50%;
     margin: 0 20px 0 0;
 }
 
@@ -38,7 +42,7 @@
 }
 
 #intro .intro-text p{
-    font-size: 1.1em;
+    font-size: .95rem;
     /* padding: 15px 30px; */
 }
 
@@ -126,10 +130,12 @@
         align-items: flex-start;
         justify-content: center;
     
-        padding-top: 50px;
+        padding-top: 0px;
         padding-left: 30px;
         width: 95%;
         height: unset;
+
+
     }
 
     #intro .intro-text p{
