--- a/src/style/components/bluebox.css
+++ b/src/style/components/bluebox.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
+
+    box-shadow: 0px 8px 16px 0 rgba(0,0,0,.5);
 }
 
 .blue-box .underline{
