--- a/crowdfunding/CSS/slabs.css
+++ b/crowdfunding/CSS/slabs.css
@@ -95,6 +95,7 @@
   /* box-shadow: 0 8px 16px 0 rgba(0,0,0,.4); */
   margin: 5px;
 
+  border-radius: 5px;
   position: relative;
 
 }
@@ -679,6 +680,7 @@
     background-color: rgb(243, 243, 243);
     /* box-shadow: 0 8px 16px 0 rgba(0,0,0,.4); */
     margin: 5px;
+
   
   }
 
