--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,4 +1,4 @@
-@import './components/body.css';
+@import './components/indexbody.css';
 @import './components/preloader.css';
 @import './components/navbar.css';
 @import './components/footer.css';
