--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -1,3 +1,14 @@
+.blocker{
+    z-index: 100!important;
+}
+
+/* .modal__btn{
+    overflow: scroll!important;
+}
+.modal__container {
+    overflow-y: scroll!important;
+} */
+
 #home{
     min-height: 100vh;
     width: 100%;
