--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -2,18 +2,11 @@
     z-index: 100!important;
 }
 
-/* .modal__btn{
-    overflow: scroll!important;
-}
-.modal__container {
-    overflow-y: scroll!important;
-} */
-
 #home{
     min-height: 100vh;
     width: 100%;
 
-    background-image: url(../../assets/Home/home-212.png);
+    background-image: url(../../../crowdfunding/cover-3-home.webp);
     background-size: cover;
     background-repeat: no-repeat;
     /* background-position: center center; */
