--- a/src/style/components/indexbody.css
+++ b/src/style/components/indexbody.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body{
 
     /* Preloader */
 
-    /* overflow: hidden; */
+    overflow-x: hidden;
 
     /* No User Selection */
 
