--- a/src/style/sections/home.css
+++ b/src/style/sections/home.css
@@ -34,6 +34,8 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+
+    /* font-family: lato, sans-serif; */
 }
 
 #home .container .heading h1{
@@ -106,6 +108,14 @@
 }
 
 @media screen and (max-width:478px) {
+
+    #home .container .heading{
+        background-color: rgba(255, 255, 255, 0.829);
+        padding: 30px 0 30px 60px;
+        /* width: 100%; */
+        margin-right: 60px;
+    }
+
     #home .container .heading h1{
         font-size: 2.6rem;
         text-transform: capitalize;
