--- a/crowdfunding/CSS/home.css
+++ b/crowdfunding/CSS/home.css
@@ -10,7 +10,7 @@
 
     /* background-image: url(../Web\ 1280\ –\ 1.png); */
     background-image: url(../cover-3.png);
-    /* background-position: center; */
+    /* background-position: center center; */
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
