--- a/crowdfunding/CSS/slabs.css
+++ b/crowdfunding/CSS/slabs.css
@@ -48,6 +48,7 @@
 #slabs .info-icon{
   height: 20px;
   cursor: pointer;
+  margin: 0 20px;
 }
 
 #slabs .container .left{
@@ -751,6 +752,14 @@
     margin-top: 10px;
     margin-left: 30px;
   }
+
+  #slabs .slabs-heading .sub-heading{
+    font-size: 1.5em;
+    font-family: lato, sans-serif;
+    color: rgb(0, 0, 0);
+    padding-right: 20px;
+  
+  }
   
   
 }
@@ -770,7 +779,7 @@
   }
 
   #slabs .container .payment-box{
-    height: 775px;
+    height: 820px;
     width: 345px;
     background-color: rgb(241, 241, 241);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
